# Multiverse.Server/AvailableWorld.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Multiverse.Server
+{
+    public class AvailableWorld : World
+    {
+        public bool Running { get; set; }
+    }
+}
